[tool.poetry]
name = "courtfinder"
version = "0.1.0"
description = ""
authors = ["kanq <artkashaev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.3"
bs4 = "^0.0.2"
requests = "^2.31.0"
aiogram = "^3.4.1"
aiogramstorages = "^1.0.0"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 130
target-version = ['py38']
include = '\.pyi?$'

[flake8]
max-line-length = 150
ignore = E203, E266, E501, W503, F403, F401
max-complexity = 18
select = B,C,E,F,W,T4,B9
